# hermes

./: .gitignore  .gitmodules  CLAUDE.md  README.md
docs/: client-setup.md
zaia/: README.md  pyproject.toml
zaia/src/zaia/: __init__.py  cli.py  data.py  server.py
zaia/tests/: test_data.py
