[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zaia"
version = "0.1.0"
description = "MCP server exposing zeus-generated datasets to an MCP client"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.28",
    "typer>=0.12",
]

[project.scripts]
zaia = "zaia.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/zaia"]
